# link-cli

./: .gitignore  .gitkeep  CLAUDE.md  Cargo.toml  Foundation.Data.Doublets.Cli.sln  GRPC_API.md  ISSUES.md  README-WASM.md  README.md  WEBASSEMBLY_IMPLEMENTATION.md  link-cli.sln  package-lock.json  package.json
.github/workflows/: ci.yml  csharp.yml  rust.yml  wasm.yml
Foundation.Data.Doublets.Cli/: AdvancedMixedQueryProcessor.cs  BasicQueryProcessor.cs  BenchmarkRunner.cs  ChangesSimplifier.cs  EnumerableExtensions.cs  Exceptions.cs  Foundation.Data.Doublets.Cli.csproj  LinksController.cs  LinksExtensions.cs  LinoGraphQLProcessor.cs  LinoGraphQLServer.cs  LinoGrpcService.cs  LinoProtocolClient.cs  LinoProtocolServer.cs  McpModels.cs  McpServer.cs  MixedQueryProcessor.cs  NamedLinks.cs  NamedLinksDecorator.cs  NamedTypesDecorator.cs  NamesLinksDecorator.cs  PinnedTypes.cs  PinnedTypesDecorator.cs  Program.cs  QueryConstants.cs  QueryProcessor.cs  SimpleLinksDecorator.cs  StorablePatternManager.cs  UnicodeStringStorage.cs  changes.patch
Foundation.Data.Doublets.Cli.Benchmarks/: Foundation.Data.Doublets.Cli.Benchmarks.csproj  Program.cs  README.md  SimpleBenchmark.cs  run-benchmarks.sh
Foundation.Data.Doublets.Cli.Benchmarks/Benchmarks/: TransportProtocolBenchmarks.cs
Foundation.Data.Doublets.Cli.Benchmarks/Models/: LinkData.cs
Foundation.Data.Doublets.Cli.Benchmarks/Serialization/: LinoSerializer.cs
Foundation.Data.Doublets.Cli.Tests/: AdvancedMixedQueryProcessor.cs  BasicQueryProcessor.cs  BenchmarkTests.cs  ChangesSimplifier.cs  Foundation.Data.Doublets.Cli.Tests.csproj  LinoGraphQLProcessorTests.cs  MixedQueryProcessor.cs  NamedLinksDecoratorTests.cs  NamesLinksDecoratorTests.cs  PinnedTypesDecoratorTests.cs  PinnedTypesTests.cs  ServerModeIntegrationTests.cs  ServerModeTests.cs  SimpleLinksDecoratorTests.cs  StorablePatternManagerTests.cs  UnicodeStringStorageTests.cs  UnitTest1.cs
csharp/.changeset/: README.md  (+7 more)
examples/: Program.cs  benchmark_demo.sh  debug_changes.cs  grpc_client_example.cs  lino-examples.md  mcp_demo.md  test-rest-api.sh  test_issue_scenario.cs  test_storable_patterns.sh  websocket_client_test.cs
experiments/: validate-wasm-workflow.mjs
protos/: lino_service.proto
rust/: Cargo.toml
rust/changelog.d/: 20260430_041900_rust_query_parity.md  20260430_063000_lino_output_export.md  20260430_070900_named_types_decorator.md  20260430_072128_validate_missing_references.md  20260430_073500_pinned_types_decorator.md  20260430_105500_named_type_query_cli.md  20260502_061000_export_alias.md  README.md
rust/src/: changes_simplifier.rs  cli.rs  error.rs  hybrid_reference.rs  lib.rs  link.rs  link_reference_validator.rs  link_storage.rs  lino_link.rs  main.rs  named_links.rs  named_type_links.rs  named_types.rs  parser.rs  pinned_types.rs  query_options.rs  query_processor.rs  query_types.rs  unicode_string_storage.rs
rust/src/sequences/: address_to_raw_number_converter.rs  balanced_variant_converter.rs  caching_converter_decorator.rs  char_to_unicode_symbol_converter.rs  default_stack.rs  mod.rs  raw_number_to_address_converter.rs  right_sequence_walker.rs  string_to_unicode_sequence_converter.rs  target_matcher.rs  unicode_sequence_to_string_converter.rs  unicode_symbol_to_char_converter.rs
rust/tests/: changes_simplifier_tests.rs  cli_arguments_tests.rs  cli_export_tests.rs  cli_named_types_tests.rs  dependency_basis_tests.rs  link_storage_tests.rs  link_tests.rs  lino_link_tests.rs  named_types_decorator_tests.rs  parser_tests.rs  pinned_types_decorator_tests.rs  query_processor_csharp_parity_tests.rs  query_processor_tests.rs  unicode_sequence_converter_tests.rs  unicode_string_storage_tests.rs
scripts/: bump-version.mjs  check-file-size.mjs  detect-code-changes.mjs  merge-changesets.mjs  validate-changeset.mjs  version-and-commit-csharp.mjs  version-and-commit-rust.mjs
src/: lib.rs  links_operations.rs  lino_parser.rs  query_processor.rs  utils.rs
tests/: web.rs
web/: index.html  vite.config.js
www/: index.html
(+41 files in other folders)
