[package]
name = "clink-wasm"
version = "2.3.0"
authors = ["link-foundation"]
edition = "2021"
description = "A CLI tool for links manipulation - WebAssembly version"
license = "Unlicense"
repository = "https://github.com/link-foundation/link-cli"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.70"

# Note: Using simplified in-memory implementation
# In a full implementation, this would use the actual doublets library

[dependencies.web-sys]
version = "0.3.70"
features = [
  "console",
  "Performance",
  "Window",
]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"