[package]
name = "clink-wasm"
version = "2.3.0"
authors = ["link-foundation"]
edition = "2021"
description = "Browser WebAssembly wrapper for the Rust link-cli core"
license = "Unlicense"
repository = "https://github.com/link-foundation/link-cli"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
link-cli = { path = "rust" }
wasm-bindgen = "0.2.120"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
wasm-bindgen-test = "0.3.70"

[dependencies.web-sys]
version = "0.3.97"
features = [
  "console",
]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
