[package]
name = "link-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for links manipulation"
license = "Unlicense"
repository = "https://github.com/link-foundation/link-cli"
authors = ["link-foundation"]
keywords = ["links", "doublets", "cli", "database"]
categories = ["command-line-utilities", "database"]

[lib]
name = "link_cli"
path = "src/lib.rs"

[[bin]]
name = "clink"
path = "src/main.rs"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
# Issue 67 Rust basis crates:
# Source: http://github.com/linksplatform/doublets-rs
doublets = "0.3.0"
# Source: http://github.com/link-foundation/links-notation
links-notation = "0.13.0"
# Source: http://github.com/link-foundation/lino-arguments
lino-arguments = "0.3.0"

[dev-dependencies]
tempfile = "3.14"
